# voiceagent

./: .env  pyproject.toml  test2.py
test/: test.py  tools.py
voice_agent/: audio_handler.py  chat_wrapper.py  config.py  instructions.py  logger.py  main.py  realtime_client.py  realtime_client_new.py  tools.py
voice_agent/Redis-x64-5.0.14.1/: dump.rdb
voice_agent/chatbot_backend/: Dockerfile  buildspec.yml  requirements.txt  setup.py
voice_agent/chatbot_backend/agentic_flow/: main.py
voice_agent/chatbot_backend/agentic_flow/agent_memory/: langgraph_memory.py
voice_agent/chatbot_backend/agentic_flow/guardrail/: api_guard.py  ask_back_guard.py  assistance_guard.py  faq_grounding.py  intent_classifier.py
voice_agent/chatbot_backend/agentic_flow/openapi_schema/: account_agent_schema.json  account_agent_static_data.json  combine.json  fund_agent_schema.json  information_centre_agent_schema.json  information_centre_agent_static_data.json  report_agent_schema.json  system_params_mapper.json  trading_agent_schema.json
voice_agent/chatbot_backend/agentic_flow/orchestrator/: dynamic_router.py  final_response_node.py  human_in_loop_node.py  langgraph_builder.py  leave_node.py  (+2 more)
voice_agent/chatbot_backend/app/: main.py
voice_agent/chatbot_backend/config/: api_config.py  config.py  secrets.py
voice_agent/chatbot_backend/demo/: run_deterministic_flow.py
voice_agent/chatbot_backend/engine/: deterministic_engine.py
voice_agent/chatbot_backend/integrations/: date_utils.py  external_api_wrapper.py
voice_agent/faq_agent/: config.py  information_center_agent.py
(+37 files in other folders)
