[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain-community>=0.3.27",
    "llama-index>=0.12.47",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pynput>=1.8.1",
    "websockets>=15.0.1",
]
